--- a/2.1Artefacts.html
+++ b/2.1Artefacts.html
@@ -85,6 +85,14 @@
 										<a href="Artefacts/Launching_into_cyber_security_artefacts/Collaborative Discussion 1/Collaborative Discussion1_peerResponse3.pdf">Peer Response 3</a>
 										<p></p>
 										<a href="Artefacts/Launching_into_cyber_security_artefacts/Collaborative Discussion 1/Collaborative Discussion1_SummaryPost.pdf">Summary Post</a>
+										<p></p>
+										<a href="Artefacts/Launching_into_cyber_security_artefacts/Collaborative Discussion 1/Collaborative Discussion1_receivedResponse1.pdf">Received Response 1</a>
+										<p></p>
+										<a href="Artefacts/Launching_into_cyber_security_artefacts/Collaborative Discussion 1/Collaborative Discussion1_receivedResponse2.pdf">Received Response 2</a>
+										<p></p>
+										<a href="Artefacts/Launching_into_cyber_security_artefacts/Collaborative Discussion 1/Collaborative Discussion1_receivedResponse3.pdf">Received Response 3</a>
+										<p></p>
+										<a href="Artefacts/Launching_into_cyber_security_artefacts/Collaborative Discussion 1/Collaborative Discussion1_receivedResponse4.pdf">Received Response 4</a>
 										</b>
 											<p> </p>
 										
