--- a/2.1Artefacts.html
+++ b/2.1Artefacts.html
@@ -125,6 +125,14 @@
 										<a href="Artefacts/Launching_into_cyber_security_artefacts/Collaborative Discussion 2/Collaborative Discussion2_peerResponse5.pdf">Peer Response 5</a>
 										<p></p>
 										<a href="Artefacts/Launching_into_cyber_security_artefacts/Collaborative Discussion 2/Collaborative Discussion2_SummaryPost.pdf">Summary Post</a>
+										<p></p>
+										<a href="Artefacts/Launching_into_cyber_security_artefacts/Collaborative Discussion 2/Collaborative Discussion2_receivedResponse1.pdf">Received Response 1</a>
+										<p></p>
+										<a href="Artefacts/Launching_into_cyber_security_artefacts/Collaborative Discussion 2/Collaborative Discussion2_receivedResponse2.pdf">Received Response 2</a>
+										<p></p>
+										<a href="Artefacts/Launching_into_cyber_security_artefacts/Collaborative Discussion 2/Collaborative Discussion2_receivedResponse3.pdf">Received Response 3</a>
+										<p></p>
+										<a href="Artefacts/Launching_into_cyber_security_artefacts/Collaborative Discussion 2/Collaborative Discussion2_receivedResponse4.pdf">Received Response 4</a>
 										</b>
 											<p> </p>
 										
