--- a/2.3Notes.html
+++ b/2.3Notes.html
@@ -137,6 +137,44 @@
 	
 									</div>
 							</section>
+										<section id="eight">
+									<div class="inner">
+										<header class="major">
+											<h2>Feedback</h2>
+										</header>
+											<b>
+										<a href="Notes/Launching_into_cyber_security/Feedback_Collaborative_Leraning_Discussion1.pdf">Collaborative Learning Discussion 1  </a>
+										<p></p>
+										</b>
+										<b>
+										<a href="Notes/Launching_into_cyber_security/Feedback_Collaborative_Leraning_Discussion2.pdf">Collaborative Learning Discussion 2  </a>
+										<p></p>
+										</b>
+										<b>
+										<a href="Notes/Launching_into_cyber_security/Feedback_Individual_Essay.pdf">Individual Essay </a>
+										<p></p>
+										</b>
+										<b>
+										<a href="Notes/Launching_into_cyber_security/Feedback_OOP_application_of_principles_and_concepts.pdf">End of Module Assignment: OOP application of principles and concepts </a>
+										<p></p>
+										</b>
+										<h2>Non-assessed Feedback</h2>
+										<b>
+										<a href="Notes/Launching_into_cyber_security/Feedback_UML_Modelling_Tool.pdf">UML Modelling Tool </a>
+										<p></p>
+										</b>
+										<b>
+										<a href="Notes/Launching_into_cyber_security/Feedback_Essay_Outline.pdf">Essay Outline </a>
+										<p></p>
+										</b>
+										<b>
+										<a href="Notes/Launching_into_cyber_security/Feedback_Prgrammin_Outline.pdf">Programming Outline</a>
+										<p></p>
+										</b>
+										
+	
+									</div>
+							</section>
 
 					</div>
 
