--- a/2.2Reflections.html
+++ b/2.2Reflections.html
@@ -54,11 +54,11 @@
 					<div id="main" class="alt">
 
 						<!-- One -->
-							<section id="one">
+				<!--			<section id="one">
 								<div class="inner">
 									<header class="major">
 										<h1></h1>
-									</header>
+									</header>  -->
 										
 									<img src="images/picreflections.jpg" width="800" height="333" align="left">  
 									<div>
