--- a/2.4Skillmatrix.html
+++ b/2.4Skillmatrix.html
@@ -70,11 +70,12 @@
 										<header class="major">
 											<h2>learned skills and personal development opportunities:</h2>
 										</header>
-										<p>
-											
+										<b>
+											<a href="Skillmatrix/Skillmatrix_Launching_into_Cyber_Security.pptx">Personal Skill Matrix</a>
+										</b>
 									
 									<p>  <p>
-									<p>  <p>
+									<p>The module Launching into Cyber Security gave me a basic understanding of the requirements of security aspects and threats in relation to programs, systems and networks. The security concerns were examined from different perspectives, such as those of companies, private individuals and nations, and discussed under an ethical context. An introduction to applied cyber security practices was shown and modeling possibilities were learned. In addition, the work with programming languages and display languages such as Flode, Python, HTML, CSS, SQL and Javascript was conveyed and learned. This entry into cyber security enables a fundamental general understanding of the field of work in the industry. In order to realize further personal development, a deeper consideration must be made in the area of cyber security. Vulnerabilities and threats have to be recognized and classification options have to be learned. A practical understanding of what criminals are doing must also be developed. In order to consolidate and further develop the skills learned, what has been learned must be strengthened and expanded through further application. A deeper consideration must also be made into the legal aspects, as this represents the framework conditions for possible procedures in the field of cyber security.  <p>
 									<p>  <p>
 									</div>
 							</section>    
