--- a/3.3Notes.html
+++ b/3.3Notes.html
@@ -70,7 +70,7 @@
 										<header class="major">
 											<h2>Meeting Notes and Preperations</h2>
 											<b>Seminar 1 - STRIDE and DREAD tools:</b>
-											<a href="Notes/Network_and_Information_Security_Management/Notes_Session1.pdf">Notes</a> <p>and</p>
+											<a href="Notes/Network_and_Information_Security_Management/Notes_Session1.pdf">Notes</a> <nobr> and </nobr>
 											<a href="Notes/Network_and_Information_Security_Management/Preperation_Session1.pptx">Preperation</a>
 											
 										</header>
