--- a/3.1Artefacts.html
+++ b/3.1Artefacts.html
@@ -81,7 +81,7 @@
 											<p></p>
 											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Groupwork Results/Practical activity Seminar 3.pdf">Seminar 3: Practical team activity</a>
 											<p></p>
-											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Groupwork Results/TCPIP vs ISOOSI discussion Seminar 3.pdf ">Seminar 3: TCP/IP vs ISO/OSI 7-layer Model discussion notes</a>
+											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Groupwork Results/TCPIP vs ISOOSI discussion Seminar 3.pdf">Seminar 3: TCP/IP vs ISO/OSI 7-layer Model discussion notes</a>
 											<p></p>
 											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Groupwork Results/Penetration testing tools rating Seminar 4.pdf">Seminar 4: Rating of penetration testing tools</a>
 											<p></p>
@@ -164,7 +164,7 @@
 									<section id="four">
 									<div class="inner">
 										<header class="major">
-											<h2>Assessment 1</h2>
+											<h2>Assessment 1 - Design Document</h2>
 										</header>
 										<details>
 										<summary>Task of this assessment was an analyse of the appropriate governing body and associated regulations of an e-commerce website. Possible security vulnerabilities based on the regulations and potential mitigations and recommendations which could reduce the risk were discussed.</summary>
@@ -180,6 +180,24 @@
 						</div>
 										</section>
 											
+										<section id="four">
+									<div class="inner">
+										<header class="major">
+											<h2>Assessment 2 - Executive Summary</h2>
+										</header>
+										<details>
+										<summary>Executive Summary text.</summary>
+										<b>
+											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Assessment 1/Name.pdf">Executive Summary</a>
+	<p></p>
+												<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Assessment 1/Name.pdf ">Peer review</a>
+	<p></p>
+										</b>
+										</details>
+										<p> </p>
+										<p> </p>
+						</div>
+										</section>
 
 				<!-- Contact -->
 		<!--			<section id="contact">
