--- a/3.3Notes.html
+++ b/3.3Notes.html
@@ -120,7 +120,8 @@
 										<header class="major">
 											<h2>Feedback</h2>
 										</header>
-										<b>Assessment 1 - Design Document</b>
+										<a href="Notes/Network_and_Information_Security_Management/Feedback_Module_Begin.pdf"><b>Module beginning</b></a>
+										<a href="Notes/Network_and_Information_Security_Management/Feedback_Collaborative_Discussion2.pdf"><b>Collaborative Discussion 2</b></a>
 										<a href="Notes/Network_and_Information_Security_Management/Feedback_Design_Document.pdf"><b>Assessment 1 - Design Document</b></a>
 											<p> </p>
 
