--- a/3.3Notes.html
+++ b/3.3Notes.html
@@ -81,8 +81,8 @@
 											<p> </p>
 											
 											<b>Seminar 3 - TCP/IP v ISO/OSI:</b>
-											<a href="Notes/Network_and_Information_Security_Management/Notes_Session3.pdf">Notes</a> <nobr> and </nobr>
-											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Groupwork Results/Practical activity Seminar 3.pdf">Preperation</a><nobr>,</nobr>
+											<a href="Notes/Network_and_Information_Security_Management/Notes_Session3.pdf">Notes</a> <nobr>,</nobr>
+											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Groupwork Results/Practical activity Seminar 3.pdf">Preperation</a><nobr>and</nobr>
 											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Groupwork Results/TCPIP vs ISOOSI discussion Seminar 3.pdf">Discussion Notes</a>
 											<p> </p>
 											
