--- a/3.1Artefacts.html
+++ b/3.1Artefacts.html
@@ -179,7 +179,7 @@
 											<h2>E-Portfolio Activity</h2>
 										</header>
 										<details>
-											<summary>An analysation of the derbian-based digitial forensic and penetration testing Linux distribution Kali Linux, as well as a comparison of our own determined assessments of penetration testing tools with the results of a comparative study of penetration testing tools by Bhingardeve & Franklin (2018) and a reflective assessment of Nessus Vulnerability Scanner and Kali Linux.</summary>
+											<summary>An analysation of the Derbian-based digitial forensic and penetration testing Linux distribution Kali Linux, as well as a comparison of our own determined assessments of penetration testing tools with the results of a comparative study of penetration testing tools by Bhingardeve & Franklin (2018) and a reflective evalutation of usage of the Nessus Vulnerability Scanner and Kali Linux.</summary>
 											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/E-Portfolio_Activity.pdf">E-Portfolio Activity documnet</a>
 										</details>
 										<p> </p>
