--- a/3.1Artefacts.html
+++ b/3.1Artefacts.html
@@ -193,7 +193,7 @@
 											<h2>Kali Linux scanning exercise</h2>
 										</header>
 										<details>
-											<summary>An investigation of the website loadedwithstuff.co.uk using Kali Linux and its tools. Information about the web server, open ports of the website, protective mechanisms such as firewalls and the software used and its version were determined..</summary>
+											<summary>An investigation of the website loadedwithstuff.co.uk using Kali Linux and its tools. Information about the web server, open ports of the website, protective mechanisms such as firewalls and the software used and its version were determined.</summary>
 											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Kali Linux scanning exercise - Michael Geiger.pdf ">Kali Linux scanning exercise</a>
 										</details>
 										<p> </p>
