--- a/3.3Notes.html
+++ b/3.3Notes.html
@@ -127,6 +127,9 @@
 										<a href="Notes/Network_and_Information_Security_Management/Feedback_Collaborative_Discussion2.pdf"><b>Collaborative Discussion 2</b></a>
 										<p> </p>
 										
+										<a href="Notes/Network_and_Information_Security_Management/Feedback_Collaborative_Discussion3.pdf"><b>Collaborative Discussion 3</b></a>
+										<p> </p>
+										
 										<a href="Notes/Network_and_Information_Security_Management/Feedback_Design_Document.pdf"><b>Assessment 1 - Design Document</b></a>
 											<p> </p>
 
