--- a/3.2Reflections.html
+++ b/3.2Reflections.html
@@ -79,8 +79,8 @@ The cooperation in my team and the joint development of the team contract sent a
 
 												<b>References:</b>
 												<ul>
-													<li>Xu, Y., Tran, D., Tian, Y., Alemzadeh, H. (2019) Poster Abstract: Analysis of Cyber-Security Vulnerabilities of Interconnected Medical Devices. International Conference on Connected Health: Applications, Systems and Engineering Technologies. Available from: https://ieeexplore.ieee.org/document/8908638 [Accessed: 16.11.2021]</li>
-													<li>Fenrich, K. (2008) Securing your control system: the „CIA triad“ is widley used benchmark for evaluation information system security effectiveness. Power Engineering. 112(2):44-45. Available from: https://go.gale.com/ps/i.do?id=GALE%7CA177028777&sid=googleScholar&v=2.1&it=r&linkaccess=abs&issn=00325961&p=AONE&sw=w&userGroupName=anon%7E97b0e51b [Accessed: 14.11.2021]</li>
+													<li>Xu, Y., Tran, D., Tian, Y., Alemzadeh, H. (2019) Poster Abstract: Analysis of Cyber-Security Vulnerabilities of Interconnected Medical Devices. International Conference on Connected Health: Applications, Systems and Engineering Technologies. Available from: https://ieeexplore.ieee.org/document/8908638 [Accessed 16.11.2021].</li>
+													<li>Fenrich, K. (2008) Securing your control system: the „CIA triad“ is widley used benchmark for evaluation information system security effectiveness. Power Engineering. 112(2):44-45. Available from: https://go.gale.com/ps/i.do?id=GALE%7CA177028777&sid=googleScholar&v=2.1&it=r&linkaccess=abs&issn=00325961&p=AONE&sw=w&userGroupName=anon%7E97b0e51b [Accessed 14.11.2021].</li>
 											</ul>
 										</details>
 										<p> </p>
@@ -97,8 +97,8 @@ The productive exchange in my group was therefore an extremely profitable result
 											
 											<b>References:</b>
 											<ul>
-												<li>Alhassan, J., Abba, E., Olaniyi, O. & Waziri, O. (2016) Threat Modeling of Electronic Healt Systems and Mitigating Countermeasures. International Conference of Information and Communiction Technology and its Application (ICTA 2016). Federal University of Technology, Minna, Nigeria. Available from: http://repository.futminna.edu.ng:8080/xmlui/handle/123456789/9522 [Accessed: 20.11.2021]</li>
-												<li>Xu, Y., Tran, D., Tian, Y., Alemzadeh, H. (2019) Poster Abstract: Analysis of Cyber-Security Vulnerabilities of Interconnected Medical Devices. 2019 IEEE/ACM International Conference on Connected Health: Applications, Systems and Engineering Technologies. Available from: https://ieeexplore.ieee.org/document/8908638 [Accessed: 16.11.2021]</li>
+												<li>Alhassan, J., Abba, E., Olaniyi, O. & Waziri, O. (2016) Threat Modeling of Electronic Healt Systems and Mitigating Countermeasures. International Conference of Information and Communiction Technology and its Application (ICTA 2016). Federal University of Technology, Minna, Nigeria. Available from: http://repository.futminna.edu.ng:8080/xmlui/handle/123456789/9522 [Accessed 20.11.2021].</li>
+												<li>Xu, Y., Tran, D., Tian, Y., Alemzadeh, H. (2019) Poster Abstract: Analysis of Cyber-Security Vulnerabilities of Interconnected Medical Devices. 2019 IEEE/ACM International Conference on Connected Health: Applications, Systems and Engineering Technologies. Available from: https://ieeexplore.ieee.org/document/8908638 [Accessed 16.11.2021].</li>
 											</ul>
 										</details>
 										<p> </p>
@@ -123,7 +123,7 @@ The seminar session in Unit 4 comprised two thematic blocks. While the presentat
 											</p>
 											<b>References:</b>
 											<ul>
-												<li>Horwitz, F. & Townshend, M. (2006) Elements in participation, teamwork and flexibility in South Africa. The International Journal of Human Resource Managemen. 4(4):917-932. Available from: https://www.tandfonline.com/doi/pdf/10.1080/09585199300000064?needAccess=true [Accessed: 05.12.2021]</li>
+												<li>Horwitz, F. & Townshend, M. (2006) Elements in participation, teamwork and flexibility in South Africa. The International Journal of Human Resource Managemen. 4(4):917-932. Available from: https://www.tandfonline.com/doi/pdf/10.1080/09585199300000064?needAccess=true [Accessed 05.12.2021].</li>
 											</ul>
 										</details>
 										<p> </p>
@@ -139,8 +139,8 @@ Since the results of the basic troubleshooting from the previous units were disc
 											
 											<b>References:</b>
 											<ul>
-												<li>Geer, D. (2015) 8 Penetration Testing Tools That Will Do the Job. Network World. Available from: https://www.networkworld.com/article/2944811/8-penetration-testing-tools-that-will-do-the-job.html [Accessed: 12.12.2021]</li>
-												<li>Singh, A. & Chatterjee, K. (2017) Cloud security issues and challenges: A survey. Journal of Network and Computer Applications. 79: 88-115. Available from: https://www.sciencedirect.com/science/article/pii/S1084804516302983 [Accessed: 12.12.2021]</li>
+												<li>Geer, D. (2015) 8 Penetration Testing Tools That Will Do the Job. Network World. Available from: https://www.networkworld.com/article/2944811/8-penetration-testing-tools-that-will-do-the-job.html [Accessed 12.12.2021].</li>
+												<li>Singh, A. & Chatterjee, K. (2017) Cloud security issues and challenges: A survey. Journal of Network and Computer Applications. 79: 88-115. Available from: https://www.sciencedirect.com/science/article/pii/S1084804516302983 [Accessed 12.12.2021].</li>
 											</ul>
 										</details>
 										<p> </p>
