--- a/3.2Reflections.html
+++ b/3.2Reflections.html
@@ -79,8 +79,8 @@ The cooperation in my team and the joint development of the team contract sent a
 
 												<b>References:</b>
 												<ul>
-													<li>Xu, Y., Tran, D., Tian, Y., Alemzadeh, H. (2019) Poster Abstract: Analysis of Cyber-Security Vulnerabilities of Interconnected Medical Devices. International Conference on Connected Health: Applications, Systems and Engineering Technologies. Available from: https://ieeexplore.ieee.org/document/8908638 [Accessed 16.11.2021].</li>
-													<li>Fenrich, K. (2008) Securing your control system: the „CIA triad“ is widley used benchmark for evaluation information system security effectiveness. Power Engineering. 112(2):44-45. Available from: https://go.gale.com/ps/i.do?id=GALE%7CA177028777&sid=googleScholar&v=2.1&it=r&linkaccess=abs&issn=00325961&p=AONE&sw=w&userGroupName=anon%7E97b0e51b [Accessed 14.11.2021].</li>
+													<li>Xu, Y., Tran, D., Tian, Y., Alemzadeh, H. (2019) Poster Abstract: Analysis of Cyber-Security Vulnerabilities of Interconnected Medical Devices. International Conference on Connected Health: Applications, Systems and Engineering Technologies. Available from: https://ieeexplore.ieee.org/document/8908638 [Accessed 16 November 2021].</li>
+													<li>Fenrich, K. (2008) Securing your control system: the „CIA triad“ is widley used benchmark for evaluation information system security effectiveness. Power Engineering. 112(2):44-45. Available from: https://go.gale.com/ps/i.do?id=GALE%7CA177028777&sid=googleScholar&v=2.1&it=r&linkaccess=abs&issn=00325961&p=AONE&sw=w&userGroupName=anon%7E97b0e51b [Accessed 14 November 2021].</li>
 											</ul>
 										</details>
 										<p> </p>
@@ -97,8 +97,8 @@ The productive exchange in my group was therefore an extremely profitable result
 											
 											<b>References:</b>
 											<ul>
-												<li>Alhassan, J., Abba, E., Olaniyi, O. & Waziri, O. (2016) Threat Modeling of Electronic Healt Systems and Mitigating Countermeasures. International Conference of Information and Communiction Technology and its Application (ICTA 2016). Federal University of Technology, Minna, Nigeria. Available from: http://repository.futminna.edu.ng:8080/xmlui/handle/123456789/9522 [Accessed 20.11.2021].</li>
-												<li>Xu, Y., Tran, D., Tian, Y., Alemzadeh, H. (2019) Poster Abstract: Analysis of Cyber-Security Vulnerabilities of Interconnected Medical Devices. 2019 IEEE/ACM International Conference on Connected Health: Applications, Systems and Engineering Technologies. Available from: https://ieeexplore.ieee.org/document/8908638 [Accessed 16.11.2021].</li>
+												<li>Alhassan, J., Abba, E., Olaniyi, O. & Waziri, O. (2016) Threat Modeling of Electronic Healt Systems and Mitigating Countermeasures. International Conference of Information and Communiction Technology and its Application (ICTA 2016). Federal University of Technology, Minna, Nigeria. Available from: http://repository.futminna.edu.ng:8080/xmlui/handle/123456789/9522 [Accessed 20 November 2021].</li>
+												<li>Xu, Y., Tran, D., Tian, Y., Alemzadeh, H. (2019) Poster Abstract: Analysis of Cyber-Security Vulnerabilities of Interconnected Medical Devices. 2019 IEEE/ACM International Conference on Connected Health: Applications, Systems and Engineering Technologies. Available from: https://ieeexplore.ieee.org/document/8908638 [Accessed 16 November 2021].</li>
 											</ul>
 										</details>
 										<p> </p>
@@ -123,7 +123,7 @@ The seminar session in Unit 4 comprised two thematic blocks. While the presentat
 											</p>
 											<b>References:</b>
 											<ul>
-												<li>Horwitz, F. & Townshend, M. (2006) Elements in participation, teamwork and flexibility in South Africa. The International Journal of Human Resource Managemen. 4(4):917-932. Available from: https://www.tandfonline.com/doi/pdf/10.1080/09585199300000064?needAccess=true [Accessed 05.12.2021].</li>
+												<li>Horwitz, F. & Townshend, M. (2006) Elements in participation, teamwork and flexibility in South Africa. The International Journal of Human Resource Managemen. 4(4):917-932. Available from: https://www.tandfonline.com/doi/pdf/10.1080/09585199300000064?needAccess=true [Accessed 05 December 2021].</li>
 											</ul>
 										</details>
 										<p> </p>
@@ -139,8 +139,8 @@ Since the results of the basic troubleshooting from the previous units were disc
 											
 											<b>References:</b>
 											<ul>
-												<li>Geer, D. (2015) 8 Penetration Testing Tools That Will Do the Job. Network World. Available from: https://www.networkworld.com/article/2944811/8-penetration-testing-tools-that-will-do-the-job.html [Accessed 12.12.2021].</li>
-												<li>Singh, A. & Chatterjee, K. (2017) Cloud security issues and challenges: A survey. Journal of Network and Computer Applications. 79: 88-115. Available from: https://www.sciencedirect.com/science/article/pii/S1084804516302983 [Accessed 12.12.2021].</li>
+												<li>Geer, D. (2015) 8 Penetration Testing Tools That Will Do the Job. Network World. Available from: https://www.networkworld.com/article/2944811/8-penetration-testing-tools-that-will-do-the-job.html [Accessed 12 December 2021].</li>
+												<li>Singh, A. & Chatterjee, K. (2017) Cloud security issues and challenges: A survey. Journal of Network and Computer Applications. 79: 88-115. Available from: https://www.sciencedirect.com/science/article/pii/S1084804516302983 [Accessed 12 December 2021].</li>
 											</ul>
 										</details>
 										<p> </p>
@@ -165,7 +165,7 @@ While some of the standards discussed, such as GDPR, ISO and PCI-DSS, were alrea
 </p>
 											<b>References:</b>
 											<ul>
-												<li>Hubbard, D. (2019) The Failure of Rist Management: Why It’s Broken and How to Fix It. Gildan Media. Available from: https://web.p.ebscohost.com/ehost/detail/detail?vid=0&sid=09e58527-ced1-4215-b79a-65f69b175706%40redis&bdata=JnNpdGU9ZWhvc3QtbGl2ZQ%3d%3d#AN=2381255&db=nlebk [Accessed 16.01.2022].</li>
+												<li>Hubbard, D. (2019) The Failure of Rist Management: Why It’s Broken and How to Fix It. Gildan Media. Available from: https://web.p.ebscohost.com/ehost/detail/detail?vid=0&sid=09e58527-ced1-4215-b79a-65f69b175706%40redis&bdata=JnNpdGU9ZWhvc3QtbGl2ZQ%3d%3d#AN=2381255&db=nlebk [Accessed 16 January 2022].</li>
 											</ul>
 										</details>
 										<p> </p>
@@ -179,8 +179,8 @@ A first in-depth look at the GDPR regulations and industry-specific standards wa
 </p>
 												<b>References:</b>
 												<ul>
-													<li>PCI (2022) PCI Security Standards Overview. Security Standards Council. Available from: https://www.pcisecuritystandards.org/pci_security/standards_overview [Accessed 16.01.2022].</li>
-													<li>HIPAA (2020) HIPAA For Dummies. Available from: https://www.hipaaguide.net/hipaa-for-dummies/ [Accessed 20.01.2022].</li>
+													<li>PCI (2022) PCI Security Standards Overview. Security Standards Council. Available from: https://www.pcisecuritystandards.org/pci_security/standards_overview [Accessed 16 January 2022].</li>
+													<li>HIPAA (2020) HIPAA For Dummies. Available from: https://www.hipaaguide.net/hipaa-for-dummies/ [Accessed 20 January 2022].</li>
 												</ul>
 										</details>
 										<p> </p>
@@ -191,8 +191,8 @@ A first in-depth look at the GDPR regulations and industry-specific standards wa
 The use of logging and monitoring systems forms the basis of forensic investigative capabilities. Therefore, an understanding of tools is essential to perform the job of cyber security specialist satisfactorily. The overview that the lecturecast gave me is a good first step for me to delve deeper into logging and forensic tools. Since there is a large number of offers, it made sense for me to first keep the distinction between these two tool categories in mind, but also to have a list of recommended tools available so that I can deal with them in a structured way. It was once again amazing for me to see how much potential Kali Linux offers, as it also offers forensic options (Hertzog et al., 2017). It was just as interesting to see that the looging tools pursue different priorities, such as the use of more precise timestamps and the regulated use of TCP links by Syslog-ng, the monitoring and active checking of transfers by Nagios or the network intrusion detection system (NIDS ) and the sniffing possibilities that Snort offers. It was also interesting to be made aware of the SIEM system, which, due to its complex structure by correlating, aggregating and analyzing logs, is able to create a report for rule-based recommendations and implement warnings for common attacks ( Kotenko & Chechulin, 2012). The consideration of various case studies as part of the Collaborative Discussion 3 prompted me to delve deeper into the GDPR. Through the mail from my fellow students, I was encouraged to look at the regulations from different perspectives and as applied in different circumstances. It was particularly interesting for me to see how the individual articles of the regulations are interwoven and thus offer comprehensive standards for the personal data protection of people. When the GDPR was introduced in 2018, I saw the new laws more as a hindrance than as a benefit. I now have to reconsider this assessment, as the benefits of the regulations for private individuals are enormous and, especially when considering progressive digitized networking and the access to personal data and their use as well as sale to third parties, can represent an intrusion into the private sphere of individuals , which can have far-reaching consequences for people and must therefore be prevented and prevented.</p>
 									<b>References:</b>
 												<ul>
-													<li>Hertzog, R., O’Gorman, J. & Mati Aharoni (2017) Kali Linux Revealed, Mastering the Penetration Testing Distribution. Cornelius, USA: Offsec Press. Available from: https://d1wqtxts1xzle7.cloudfront.net/63524487/ch120200604-27390-1kbkd1l-with-cover-page-v2.pdf?Expires=1643292106&Signature=AhbYhiCfDehTUVhL05pv8WS3PY4Yr6rjufdtwhzjKRb1~26W4B2sN2oCEvme5ACV-JSNk2WTg1yzAa0NPMnNm7ccpVIKcU3Js0czcJo5BxCroA34vwXcuVD6tJC3nbmXTFtSML4-V-nAJR-UsXRtP4CSKnmc7NMoQJXClybUURadVG0sej~MeXLU8zMC3v7-On4YAFGsJZUgKyO9cDicNOQ4kSfIQ0nqjcAb-AZnapRjlXBiuBiXHk46GaZ6zRpQ-GtV-i7zvXKEz3Th6UrD3snTkrzANXvu67kVxSTBBnOkTGojvdJ72L~6x5ISikYaUwgA-ZVUIoYra3GXEJEwmw__&Key-Pair-Id=APKAJLOHF5GGSLRBV4ZA [Accessed 31.01.2022].</li>
-													<li>Kotenko, I. & Chechulin, A. (2012) Attack Modeling and Security Evaluation in SIEM Systems. St. Petersburg Institute for Informatics and Automation (SPIIRAS). Saint-Petersburg, Russia. Available from: http://siwn.org.uk/press/sai/itssa0008/itssa.0008.2012.041.pdf [Accessed 27.01.2022].</li>
+													<li>Hertzog, R., O’Gorman, J. & Mati Aharoni (2017) Kali Linux Revealed, Mastering the Penetration Testing Distribution. Cornelius, USA: Offsec Press. Available from: https://d1wqtxts1xzle7.cloudfront.net/63524487/ch120200604-27390-1kbkd1l-with-cover-page-v2.pdf?Expires=1643292106&Signature=AhbYhiCfDehTUVhL05pv8WS3PY4Yr6rjufdtwhzjKRb1~26W4B2sN2oCEvme5ACV-JSNk2WTg1yzAa0NPMnNm7ccpVIKcU3Js0czcJo5BxCroA34vwXcuVD6tJC3nbmXTFtSML4-V-nAJR-UsXRtP4CSKnmc7NMoQJXClybUURadVG0sej~MeXLU8zMC3v7-On4YAFGsJZUgKyO9cDicNOQ4kSfIQ0nqjcAb-AZnapRjlXBiuBiXHk46GaZ6zRpQ-GtV-i7zvXKEz3Th6UrD3snTkrzANXvu67kVxSTBBnOkTGojvdJ72L~6x5ISikYaUwgA-ZVUIoYra3GXEJEwmw__&Key-Pair-Id=APKAJLOHF5GGSLRBV4ZA [Accessed 31 January 2022].</li>
+													<li>Kotenko, I. & Chechulin, A. (2012) Attack Modeling and Security Evaluation in SIEM Systems. St. Petersburg Institute for Informatics and Automation (SPIIRAS). Saint-Petersburg, Russia. Available from: http://siwn.org.uk/press/sai/itssa0008/itssa.0008.2012.041.pdf [Accessed 27 January 2022].</li>
 												</ul>
 										</details>
 										<p> </p>
@@ -205,8 +205,8 @@ The conclusion of the Collaborative Discussion 3 gave me an expanded picture of 
 </p>
 												<b>References:</b>
 												<ul>
-													<li>Hill, M. & Swinhoe, D. (2021) The 15 biggest data breaches oft he 21st century. CSO Online. Available from: https://www.csoonline.com/article/2130877/the-biggest-data-breaches-of-the-21st-century.html [Accessed 05.02.2022].</li>
-													<li>ICO (2014) Audit: a guide to ICO privacy and electronic communications regulations audits. Available from: https://ico.org.uk/media/for-organisations/documents/2784/guide-to-ico-pecr-audits.pdf [Accessed 02.02.2022].</li>
+													<li>Hill, M. & Swinhoe, D. (2021) The 15 biggest data breaches oft he 21st century. CSO Online. Available from: https://www.csoonline.com/article/2130877/the-biggest-data-breaches-of-the-21st-century.html [Accessed 05 February 2022].</li>
+													<li>ICO (2014) Audit: a guide to ICO privacy and electronic communications regulations audits. Available from: https://ico.org.uk/media/for-organisations/documents/2784/guide-to-ico-pecr-audits.pdf [Accessed 02 February 2022].</li>
 												</ul>
 										</details>
 										<p> </p>
