--- a/3.1Artefacts.html
+++ b/3.1Artefacts.html
@@ -203,7 +203,7 @@
 										</header>
 										<details>
 											<summary>An analysation of the Derbian-based digitial forensic and penetration testing Linux distribution Kali Linux, as well as a comparison of our own determined assessments of penetration testing tools with the results of a comparative study of penetration testing tools by Bhingardeve & Franklin (2018) and a reflective evalutation of usage of the Nessus Vulnerability Scanner and Kali Linux.</summary>
-											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/E-Portfolio_Activity.pdf">E-Portfolio Activity document</a>
+										<b>	<a href="Artefacts/Network_and_Information_Security_Management_artefacts/E-Portfolio_Activity.pdf">E-Portfolio Activity document</a> </b>
 										</details>
 										<p> </p>
 										<p> </p>
@@ -217,9 +217,9 @@
 										</header>
 										<details>
 											<summary>An investigation of the website loadedwithstuff.co.uk using Kali Linux and its tools. Information about the web server, open ports of the website, protective mechanisms such as firewalls and the software used and its version were determined.</summary>
-											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Kali Linux scanning exercise - Michael Geiger.pdf">Kali Linux scanning exercise</a>
-											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/More_scanning_results.pdf">More tests carried out</a>
-											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/OWASP-ZAP_scan_results.pdf ">OWASP-ZAP scan result</a>
+											<b> <a href="Artefacts/Network_and_Information_Security_Management_artefacts/Kali Linux scanning exercise - Michael Geiger.pdf">Kali Linux scanning exercise</a> </b>
+										<b>	<a href="Artefacts/Network_and_Information_Security_Management_artefacts/More_scanning_results.pdf">More tests carried out</a> </b>
+											<b> <a href="Artefacts/Network_and_Information_Security_Management_artefacts/OWASP-ZAP_scan_results.pdf ">OWASP-ZAP scan result</a> </b>
 										</details>
 										<p> </p>
 										<p> </p>
@@ -235,9 +235,9 @@
 										<details>
 										<summary>Task of this assessment was an analyse of the appropriate governing body and associated regulations of an e-commerce website. Possible security vulnerabilities based on the regulations and potential mitigations and recommendations which could reduce the risk were discussed.</summary>
 										<b>
-											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Assessment 1/Team Design Document.pdf">Design Document</a>
+										<b>	<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Assessment 1/Team Design Document.pdf">Design Document</a> </b>
 	<p></p>
-												<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Assessment 1/Team Evaluating Template.pdf ">Peer review</a>
+											<b>	<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Assessment 1/Team Evaluating Template.pdf ">Peer review</a> </b>
 	<p></p>
 										</b>
 										</details>
