--- a/3.1Artefacts.html
+++ b/3.1Artefacts.html
@@ -271,9 +271,9 @@
 										
 											<p> </p>
 											<b>
-											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Assessment 2/Name.pdf">Executive Summary</a>
+											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Assessment 2/Executive Summary - Group 1.pdf">Executive Summary</a>
 	<p> </p>
-												<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Assessment 2/Name.pdf ">Peer review</a>
+												<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Assessment 2/Peer Evaluation Template - Michael Geiger - Executive Summary.pdf">Peer review</a>
 	<p> </p>
 										</b>
 										</details>
