--- a/3.4Skillmatrix.html
+++ b/3.4Skillmatrix.html
@@ -68,7 +68,7 @@
 						<section id="two">
 									<div class="inner">
 										<header class="major">
-											<h2>learned skills and personal development opportunities:</h2>
+									<!--		<h2>learned skills and personal development opportunities:</h2>   -->
 										</header>
 										<p>
 											<b>
