--- a/3.3Notes.html
+++ b/3.3Notes.html
@@ -102,7 +102,8 @@
 											<p> </p>  
 								<!--			
 										<b>Seminar 7 - Debate Vote:</b>
-											<a href="Notes/Network_and_Information_Security_Management/Notes_Session7.pdf">Notes</a> <nobr> and </nobr>
+											<a href="Notes/Network_and_Information_Security_Management/Notes_Session7.pdf">Notes</a> <nobr>,</nobr>
+											<a href="Notes/Network_and_Information_Security_Management/Debate_Contribution.pdf">Debate Contribution</a> <nobr> and </nobr>
 											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Groupwork Results/Penetration testing tools rating Seminar 4.pdf">Preperation</a>
 											<p> </p>
 											
