--- a/3.3Notes.html
+++ b/3.3Notes.html
@@ -104,7 +104,7 @@
 										<b>Seminar 7 - Debate Vote:</b>
 											<a href="Notes/Network_and_Information_Security_Management/Notes_Session7.pdf">Notes</a> <nobr>,</nobr>
 											<a href="Notes/Network_and_Information_Security_Management/Debate_Contribution.pdf">Debate Contribution</a> <nobr> and </nobr>
-											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Groupwork Results/">Preparation</a>
+											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Groupwork Results/Content-centric Networking Seminar 7.pdf">Preparation</a>
 											<p> </p>
 										<p> </p>
 										<b><a href="Notes/Network_and_Information_Security_Management/Team_meeting_notes">Notes of the team meetings</a></b>
