--- a/3.3Notes.html
+++ b/3.3Notes.html
@@ -107,7 +107,7 @@
 											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Groupwork Results/Content-centric Networking Seminar 7.pdf">Preparation</a>
 											<p> </p>
 										<p> </p>
-										<b><a href="Notes/Network_and_Information_Security_Management/Team_meeting_notes">Notes of the team meetings</a></b>
+										<b><a href="Notes/Network_and_Information_Security_Management/Team_meeting_notes.pdf">Notes of the team meetings</a></b>
 										<p> </p>
 										
 	
