--- a/3.1Artefacts.html
+++ b/3.1Artefacts.html
@@ -90,9 +90,9 @@
 											<p> </p>
 											<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Groupwork Results/Data breach case study - Marriot International Seminar 6.pdf">Seminar 6: Data Breach case study</a>
 											<p> </p>
-									<!--		<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Groupwork Results/Penetration testing tools rating Seminar 4.pdf">Seminar 7: Debate Vote</a>
+						      		<a href="Artefacts/Network_and_Information_Security_Management_artefacts/Groupwork Results/Content-centric Networking Seminar 7.pdf">Seminar 7: Debate Vote</a>
 											<p> </p>
-										-->
+										
 										</b>
 										</details>
 										<p> </p>
