--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="3Networkandinformtaionsecuritymanagement.html" class="link">Network and Information Security Management</a></h3>
-										<p>Work in Progress</p>
+										<p>A grounding in security concepts and terminology, illustrated by hands on practice in one of the most important aspects of information security today – network technology</p>
 									</header>
 								</article>
 								<article>
