--- a/3.3Notes.html
+++ b/3.3Notes.html
@@ -132,7 +132,7 @@
 										<a href="Notes/Network_and_Information_Security_Management/Feedback_Design_Document.pdf"><b>Assessment 1 - Design Document</b></a>
 											<p> </p>
 										
-										<a href="Notes/Network_and_Information_Security_Management/"><b>Assessment 2 - Executive Summary</b></a>
+										<a href="Notes/Network_and_Information_Security_Management/"><b>Assessment 2 - Executive Summary</b></a><nobr>Will be submitted as soon as available</nobr>
 											<p> </p>
 										
 										<a href="Notes/Network_and_Information_Security_Management/Feedback_Module_Conclusion.pdf"><b>Module conclusion</b></a>
