--- a/3.1Artefacts.html
+++ b/3.1Artefacts.html
@@ -269,7 +269,7 @@
 											<h2>Assessment 2 - Executive Summary</h2>
 										</header>
 										<details>
-										<summary>The executive summary deals with an examination of the security aspects and vulnerabilities of the e-commerce website "loadedwithstuff.co.uk" based on standards and regulations concerning the industry. Penetration testing and ethical hacking were carried out as part of the investigations. More results of the site investigation can be found in the <a href="https://mgeiger94.github.io/MSc-Cybersecurity-E-Portfolio/3.1Artefacts.html#five">"Kali Linux scanning exercise"</a> section.</summary>
+										<summary>The Executive Summary deals with an examination of the security aspects and vulnerabilities of the e-commerce website "loadedwithstuff.co.uk" based on standards and regulations concerning the industry. Penetration testing and ethical hacking were carried out as part of the investigations. More results of the site investigation can be found in the <a href="https://mgeiger94.github.io/MSc-Cybersecurity-E-Portfolio/3.1Artefacts.html#five">"Kali Linux scanning exercise"</a> section.</summary>
 										
 											<p> </p>
 											<b>
