--- a/2.2Reflections.html
+++ b/2.2Reflections.html
@@ -97,8 +97,12 @@
 
 					</div>
 
-				<!-- Contact -->
-		
+		<!-- Contact -->
+					<section id="contact">
+						<div class="inner">
+							<section>
+					
+							</section>
 							<section class="split">
 								<section>
 									<div class="contact-method">  
@@ -108,11 +112,12 @@
 									</div>
 								</section>
 								<section>
-		
-								</section>
+					
+							</section>
 							</section>
 						</div>
 					</section>
+
 
 				<!-- Footer -->
 					<footer id="footer">
